<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login_name"/>

            <EditText
                android:id="@+id/callNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_call_user_name"/>

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_message_you_want_to_send"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"/>

                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/call"/>

                <Button
                    android:id="@+id/btnHangUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/hangup"/>

                <Button
                    android:id="@+id/btnSendMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/sendmessage"/>
            </LinearLayout>
        </LinearLayout>

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/remoteMediaView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/localMediaView"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:visibility="gone"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>